# GeometricRust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-build.yml  rust-clippy.yml  rust-format.yml  rust-test.yml
src/: errors.rs  main.rs
src/traits/: distance.rs  generator.rs  intersection.rs  mod.rs  numbers.rs  plot.rs  segment.rs
src/types/: circle.rs  mod.rs  ordering.rs  point.rs  polygon.rs  rectangle.rs  segment.rs  triangle.rs
