[package]
name = "geometric-rust"
version = "0.1.0"
authors = ["Cassandra Pearson <cnegrich@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.94"
float-cmp = "0.10.0"
thiserror = "2.0.5"
rstest = "0.23.0"
crypticRust = { git = "https://github.com/cassiepearson/CrypticRust.git" }